# inc-kf-src-ingest

./: README.md  pyproject.toml
src/src_ingest/: _version.py
src/src_ingest/models/: connector.py  file_utils.py  sql_generator.py
src/src_ingest/models/actions/: copy_data.py  copy_data_no_dd.py  copy_data_wo_format.py
